kelvin: the test page has been created

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 VITE_GEMINI_API_KEY=AIzaSyDJUn7UEia1bOxfFYac87FlZ3LtElfEJIw
+
+# .env.development
+VITE_API_BASE_URL=https://rcmsuat.craftsilicon.com/api1/website/api
+
+# .env.production
+VITE_API_BASE_URL=https://rcmslive.craftsilicon.com/api1/website/api
