--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue3-select": "^0.1.2",
     "vue3-select-component": "^0.11.7",
     "vue3-table-lite": "^1.4.3",
+    "vuedraggable": "^2.24.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
